--- a/storms.Rmd
+++ b/storms.Rmd
@@ -7,7 +7,7 @@ output: html_document
 ---
 
 ```{r include = FALSE}
-knitr::opts_chunk$set(echo = TRUE, message = FALSE, cache = TRUE, fig.height = 6)
+knitr::opts_chunk$set(echo = TRUE, message = FALSE, cache = TRUE, fig.height = 6, fig.align = "center")
 ```
 
 Last Updated: `r Sys.Date()`
@@ -28,8 +28,8 @@ This section provides a step-by-step process for downloading, reading in, and pr
 ready for analysis.
 <br>
 
-Step 1: Download and read the dataset into R. This should take about 30 seconds.
-```{r echo = TRUE, cache = TRUE, message = FALSE}
+Step 1: Download and read the dataset into R. This should take about 30 seconds and there should be 902,297 observations and 37 variables in the `storms` data frame.
+```{r results = "hide"}
 # Download the .csv.bz2 file
 url <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2FStormData.csv.bz2"
 if(!file.exists("stormData.csv.bz2")){
@@ -48,7 +48,7 @@ unlink(file, recursive = TRUE)
 
 Step 2: Make an initial subset of the data that only contains the variables that you need for the analysis and
 that only contains data from 1996-2011.
-```{r echo = TRUE, cache = TRUE, message = FALSE}
+```{r}
 # select only 9 variables from storms
 sub <- storms[,c(2,7,8,23,24,25,26,27,28)]
 
@@ -87,7 +87,7 @@ p3 <- sub %>%
 
 Step 3: Look at the subset and see if there are any storm types that are misspelled and could affect the analysis
 if they weren't included.
-```{r echo = TRUE, message = FALSE, cache = TRUE}
+```{r}
 # Extract official event names from online database. Note that there
 # are actually 49 unique events, not 48.
 library(stringr)
@@ -120,19 +120,19 @@ counts <- p3 %>%
 
 Based on looking at `counts`, I made the following set of changes to specific `EVTYPE` categories because failing
 to classify them with their correct, official name would clearly have an impact on the conclusions of the analysis:  
-* RIP CURRENTS = RIP CURRENT  
-* EXTREME COLD = EXTREME COLD/WIND CHILL  
-* HURRICANE = HURRICANE/TYPHOON
-* STORM SURGE = STORM SURGE/TIDE  
-* TSTM WIND = THUNDERSTORM WIND  
-* WILD/FOREST FIRE = WILDFIRE  
-* TYPHOON = HURRICANE/TYPHOON  
+- RIP CURRENTS = RIP CURRENT  
+- EXTREME COLD = EXTREME COLD/WIND CHILL  
+- HURRICANE = HURRICANE/TYPHOON
+- STORM SURGE = STORM SURGE/TIDE  
+- TSTM WIND = THUNDERSTORM WIND  
+- WILD/FOREST FIRE = WILDFIRE  
+- TYPHOON = HURRICANE/TYPHOON  
 <br>
 
 In addition, by looking at `max.total.dmg` it seemed to me that there was probably a typo. Given that no other
 `EVTYPE` came near $100 billion in total damage COMBINED, it seemed very unusual that a SINGLE flood could do 
 more than $115 billion in total damage! So I decided to look into it:
-```{r echo = TRUE, cache = TRUE}
+```{r}
 sub2 <- storms[,c(2,6,7,8,23,24,25,26,27,28,36)] %>%  # subset containing REMARKS and COUNTY
         mutate(EVTYPE = toupper(EVTYPE),
                BGN_DATE = mdy_hms(BGN_DATE))
@@ -153,7 +153,7 @@ sub2 %>% filter(EVTYPE %in% event.names) %>%
 After reading some of the `REMARKS` surrounding the Napa County flood, I learned that it was the Napa River that
 flooded. I did some research and found no evidence that supported an estimate of anywhere near $100 billion in
 damages. Furthermore, as I was looking at flood entries around the same time, I found this:
-```{r echo = TRUE, cache = TRUE}
+```{r}
 sub2 %>% filter(year(BGN_DATE) %in% 2005:2006) %>% 
         filter(str_detect(REMARKS, "Napa River")) %>% 
         select(BGN_DATE, PROPDMG, PROPDMGEXP, CROPDMG, CROPDMGEXP) # look similar?
@@ -163,7 +163,7 @@ sub2 %>% filter(year(BGN_DATE) %in% 2005:2006) %>%
 It looks like two estimates were made of the same flood on two separate days, and on one of those days a 'B' for
 billion was entered intead of an 'M' for million. Even looking at the remarks from both days, it appears that the 
 estimate was meant to be in the millions, not the billions:
-```{r echo = TRUE, cache = TRUE}
+```{r}
 sub2 %>% filter(year(BGN_DATE) %in% 2005:2006) %>% 
         filter(str_detect(REMARKS, "Napa River")) %>% 
         select(REMARKS)
@@ -172,7 +172,7 @@ sub2 %>% filter(year(BGN_DATE) %in% 2005:2006) %>%
 
 So because of this, I decided to remove the duplicate billion dollar estimate from the analysis.  
 Here are all the additional changes made to the dataset to make it ready for analysis:
-```{r echo = TRUE, cache = TRUE}
+```{r}
 p3 <- p3 %>% mutate(EVTYPE = ifelse(EVTYPE == "RIP CURRENTS", "RIP CURRENT", EVTYPE),
                EVTYPE = ifelse(EVTYPE == "EXTREME COLD", "EXTREME COLD/WIND CHILL", EVTYPE),
                EVTYPE = ifelse(EVTYPE == "HURRICANE", "HURRICANE/TYPHOON", EVTYPE),
@@ -198,7 +198,7 @@ The two questions I asked the data were the following:
 To answer the first question, I've grouped the data by storm event type and plotted the total number of
 fatalities and injuries that were caused by each type of storm event from 1996-2011. Here's the code and
 the plot:
-```{r echo = TRUE, message = FALSE, cache = TRUE}
+```{r}
 # health.levels is a vector of factor levels to be used to make
 # the plot pretty later
 health.levels <- p3 %>% 
@@ -219,7 +219,7 @@ health2 <- p3 %>%
                   injuries = sum(INJURIES),
                   grand.total = sum(FATALITIES, INJURIES)) %>% 
         arrange(desc(grand.total)) %>% 
-        gather("inj.fat", "count", fatalities, injuries) %>% # gather FATALITIES and INJURIES into key/value pair
+        gather("inj.fat", "count", fatalities, injuries) %>% # gather fatalities, injuries into key/value pair
         arrange(desc(grand.total)) %>% 
         head(20) %>% # filter top ten storm types
         mutate(EVTYPE = factor(EVTYPE, levels = health.levels), # Put factor levels in decreasing order
@@ -263,8 +263,8 @@ captionA <- "FIGURE 1.  The ten storm events that have caused the highest number
 the color of the bars shows the individual totals of injuries and deaths. Tornadoes have caused by far the most
 injuries (20,667 in total). Excessive heat has caused the most deaths (1,797 in total)."
 title1 <- textGrob("Storm events causing the most \ndeaths and injuries from 1996-2011",
-                   x = unit(.1, "npc"),
-                   just = c("left"),
+                   x = unit(.5, "npc"),
+                   just = c("center"),
                    gp = gpar(fontsize = 18, 
                              fontface = "bold"))
 plot1 <- ggplot(health2, aes(EVTYPE, count)) +
@@ -279,13 +279,13 @@ plot1 <- ggplot(health2, aes(EVTYPE, count)) +
         coord_flip() +
         theme
 caption1 <- textGrob(str_wrap(captionA),
-                     x = unit(.1, "npc"),
+                     x = unit(0.1, "npc"),
                      just = "left")
 
 # Here's the actual plot
 grid.arrange(plot1, top = title1, bottom = caption1)
 ```
-<br><br><br><br><br>
+<br>
 
 As the caption explains, tornadoes have caused by far the most number of injuries from 1996-2011, while excessive
 heat has caused the most number of deaths. Note that "excessive heat" and "heat" both show up in the top ten storm
@@ -296,7 +296,7 @@ reaches or exceeds 105 degrees Fahrenheit.
 
 The same approach was used to answer the second question. The ten storm types that have caused the most property
 and crop damage from 1996-2011 are shown in the following plot (after the code):
-```{r echo = TRUE, message = FALSE, cache = TRUE}
+```{r}
 # Calculate damage statistics for all EVTYPEs
 damage <- p3 %>% 
         filter(total.dmg > 0) %>% 
@@ -327,8 +327,8 @@ the color of the bars represents the individual totals of property damage and cr
 Hurricanes have caused the most damage overall (about $87 billion) but droughts have caused the most crop
 damage (about $13 billion)."
 title2 <- textGrob("Storm events causing the most property \nand crop damage from 1996-2011",
-                   x = unit(.1, "npc"),
-                   just = c("left"),
+                   x = unit(.5, "npc"),
+                   just = c("center"),
                    gp = gpar(fontsize = 18, 
                              fontface = "bold"))
 plot2 <- ggplot(damage, aes(EVTYPE, cost/1e9)) +
@@ -342,21 +342,17 @@ plot2 <- ggplot(damage, aes(EVTYPE, cost/1e9)) +
         coord_flip() +
         theme
 caption2 <- textGrob(str_wrap(captionB),
-                     x = unit(.1, "npc"),
+                     x = unit(0.1, "npc"),
                      just = c("left"))
 
 # Here's the plot.
 grid.arrange(plot2, top = title2, bottom = caption2)
 ```
-<br><br><br><br><br><br>
+<br>
 
 As explained in the caption, hurricanes have caused the most total damage from 1996-2011, and the bulk of this
 damage came from property damage. Droughts, however, have caused much more crop damage than any other type of
-weather event.
-<br>
-
-Not surprisingly, many of the storm types were present in both plots, indicating that the types of storms that
-tend to cause a lot of damage tend to be the same types of storms that injure and kill people.
+weather event. Not surprisingly, many of the storm types were present in both plots, indicating that the types of storms that tend to cause a lot of damage tend to be the same types of storms that injure and kill people.
 <br>
 
 For more information about the storm database, you can visit the [NOAA](https://www.ncdc.noaa.gov/stormevents/details.jsp?type=eventtype) website. You can also visit my
